--- a/aip/auth/4117.md
+++ b/aip/auth/4117.md
@@ -205,7 +205,7 @@ endpoint.
 | Field Name                                       | Required | Description |
 |--------------------------------------------------|----------|:------------|
 | environment_id                 | Yes      | This is the environment identifier, of format `aws${version}`. A version should be specified to indicate to the auth library whether breaking changes were introduced to the underlying AWS implementation. So if aws1 is supported in the current version of the library but a credential file with aws2 is provided, an error should be thrown instructing the developer to upgrade to a newer version of the library. |
-| region_url                     | Yes      | This URL should be used to determine the current AWS region needed for the signed request construction. |
+| region_url                     | No       | This URL should be used to determine the current AWS region needed for the signed request construction. |
 | url                            | No       | This AWS metadata server URL should be used to retrieve the access key, secret key and security token needed to sign the `GetCallerIdentity` request. The $ROLE_NAME should be retrieved from calling this endpoint without any parameter and then calling again with the returned role name appended to this URL: http://169.254.169.254/latest/meta-data/iam/security-credentials/$ROLE_NAME |
 | regional_cred_verification_url | Yes      | This defines the regional AWS `GetCallerIdentity` action URL. This URL should be used to determine the AWS account ID and its roles. This should not actually be called by the Auth libraries. It should be called on the STS token server. The region should be substituted by SDK, e.g. `sts.eu-west-1.amazonaws`.com. |
 | imdsv2_session_token_url       | No       | Presence of this URL enforces the auth libraries to fetch a Session Token from AWS. This field is required for EC2 instances using IMDSv2. This Session Token would later be used while making calls to the metadata enpoint. |
