fix: IMDSV2 token should only be fetched if needed
No need to fetch the token if environment variables for both the region and the security credentials have been provided.

--- a/aip/auth/4117.md
+++ b/aip/auth/4117.md
@@ -237,7 +237,9 @@ The auth libraries and applications **must** follow the steps below:
   error, trigger an error that the auth library needs to be updated to handle
   this type of credentials.
 - If **imdsv2_session_token_url** is available, then fetch session token
-  from **imdsv2_session_token_url**.
+  from **imdsv2_session_token_url**. Note: only perform this step if you
+  need to communicate with the metadata server to fetch the region and/or
+  the security credentials
 - Check the environment variables in the following order (`AWS_REGION` and
   then the `AWS_DEFAULT_REGION`) to determine the AWS region. If found, skip
   using the AWS metadata server to determine this value.
