--- a/aip/general/0136.md
+++ b/aip/general/0136.md
@@ -59,6 +59,7 @@ services. The bullets below apply in all three cases.
   - If word separation is required, `camelCase` **must** be used.
 - The `body` clause in the `google.api.http` annotation **should** be `"*"`.
   - However, if using `GET`, the `body` clause **must** be absent.
+  - See [HTTP and gRPC Transcoding][transcoding] for more information.
 - Custom methods **should** take a request message matching the RPC
   name, with a `Request` suffix.
 - Custom methods **should** return a response message matching the RPC
@@ -163,6 +164,7 @@ without risk of runtime impact.
 [create]: ./0133.md
 [update]: ./0134.md
 [delete]: ./0135.md
+[transcoding]: ./0127.md
 
 ### RPC name
 
@@ -176,6 +178,7 @@ languages.
 
 ## Changelog
 
+- **2023-11-16:** Linked to AIP-127 "HTTP and gRPC Transcoding" for expanding "body" definition guidance. 
 - **2023-05-16:** Added prohibition of the term "async" within RPC names.
 - **2023-05-09:** Adding guidance for POST and GET, require parent instead of
   the resource singular.
